# Thyroid-Detection

./: .dockerignore  .gitignore  .vercelignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  init_db.py  main.py  models.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: deploy.yml
src/model/: RF1_model.ipynb  RF1_model.pkl  label_encoder_v2.pkl  pipeline_summary.json  thyroid_detection_v2.py  thyroid_model_v2.pkl
src/rag/: chatbot.py
static/css/: aboutus.css  home.css  index.css  map.css  riskfac.css
templates/: aboutus.html  chat.html  home.html  index.html  login.html  map.html  profile.html  riskfac.html  signup.html
tests/: test_app.py
